# Procuris

./: .env  .gitignore  README.md  main.py  pyproject.toml
backend/: .env  app.py  config.py  requirements.txt
backend/db/: supabase_client.py  users.py
backend/routes/: __init__.py  hello.py  users.py  vendors.py
backend/services/: vendors.json  vendors.py
backend/utils/: auth.py  current_user.py
data_pipeline/: .env  .env.example  End to End Data Ingestion Pipeline  README.md  api_utils.py  clean_data.py  data_pull.ipynb  db_utils.py  docker-compose.yml  get_data_but_made_by_an_actual_person.ipynb  ingest_census.py  ingest_comtrade.py  ingest_fred.py  ingest_opensky.py  ingest_polygon.py  ingest_worldbank.py  interpolate_data_on_supabase.py  nulls_visualization.py  push_data_to_supabase.py  run_pipeline_podman.sh  test_db.py
data_pipeline/.old/: ingest_api.py  ingest_csv.py
forecasting/: .env  forecast_tsmixer.ipynb  load_data.ipynb  neural_forecast_test.ipynb  train_tsmixer.ipynb
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend-mockup/: .env  package-lock.json  package.json
frontend-mockup/src/: App.jsx  index.css
frontend-mockup/src/api/: index.js
frontend-mockup/src/hooks/: useCountUp.js
frontend-mockup/src/lib/: supabase.js
frontend-mockup/src/pages/: Dashboard.jsx  LoadingScreen.jsx  Login.jsx  VendorEntry.jsx
frontend/src/: App.jsx
frontend/src/api/: index.js
frontend/src/components/: Login.jsx  Signup.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  (+3 more)
(+26 files in other folders)
