[project]
name = "yhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flax>=0.12.6",
    "ipykernel>=7.2.0",
    "ipynotebook>=0.1.0",
    "jax>=0.9.2",
    "python-jose>=3.5.0",
    "supabase>=2.28.3",
    "jupyter>=1.1.1",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "pandas>=3.0.1",
    "polygon-api-client>=1.16.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.48",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "adbc-driver-postgresql>=1.10.0",
    "connectorx>=0.4.5",
    "pyarrow>=23.0.1",
    "neuralforecast>=3.1.6",
    "utilsforecast>=0.2.15",
    "matplotlib>=3.10.8",
]
